--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ crashlytics-build.properties
 # Log files can be ignored.
 fmod_editor.log
 # FMOD ------------------------------------
+/Alberta Game Jam/fmod_editor.log
