--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ Alberta Game Jam/[Aa]ssets/StreamingAssets/**/*.bank.meta
 fmod_editor.log
 # FMOD ------------------------------------
 Alberta Game Jam/fmod_editor.log
+Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
