--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ fmod_editor.log
 # FMOD ------------------------------------
 Alberta Game Jam/fmod_editor.log
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
