--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ fmod_editor.log
 Alberta Game Jam/fmod_editor.log
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
