--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+*.zip
