--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
 *.zip
+Alberta Game Jam/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
